--- a/app/views/main.html
+++ b/app/views/main.html
@@ -11,6 +11,10 @@
         #{get 'moreScripts' /}
     </head>
     <body>
+    <header>
+    </header>
         #{doLayout /}
+    <footer>
+    </footer>
     </body>
 </html>
