--- a/app/views/Application/project.html
+++ b/app/views/Application/project.html
@@ -5,6 +5,8 @@
     laneWidth = Math.round(1000/(project.states.size() - 2))/10
 }%
 
+<span>This is some text</span><img src="//" />
+
 <section class="project">
 	<h1>${project.title}</h1>
 	<p>${project.description}</p>
@@ -18,6 +20,11 @@
 			#{list items:project.states[1..-2], as:'state'}
                 <td id="state-${state.id}" class="lane" style="width:${laneWidth}%">
                     <div class="lane-header">${state.name}</div>
+                    <ul>
+                    #{list items:state.stories, as:'story'}
+                        <li class="story ${story.colour}">#{story-card story:story /}</li>
+                    #{/list}
+                    </ul>
 			    </td>
 			#{/list}
 			</tr>
