--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,14 +1,26 @@
+/* Reset all spacing. */
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, 
+blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, 
+font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, 
+b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, 
+table, caption, tbody, tfoot, thead, tr, th, td {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	outline: 0;
+	font-size: 100%;
+	vertical-align: baseline;
+	background: transparent;
+}
+
 body {
 	font-size:100%;
     font-family:Tahoma,Arial,Verdana,sans-serif;
 	color:#000;
-	margin:0;
-	padding:0;
 }
 
 table {
 	border-collapse: collapse;
-	border-spacing: 0;
 }
 
 #middle-lanes table {
@@ -16,13 +28,87 @@ table {
 	height: 513px;
 }
 
-#middle-lanes .lane {
-	border-left: 2px solid #BBB;
-	border-right: 2px solid #BBB;
+.lane {
+	border-left: 2px solid #bbb;
+	border-right: 2px solid #bbb;
 	vertical-align: top;
+	
+	padding: 8px;
 }
 
-#middle-lanes .lane-header {
-	font-size: 130%;
+.lane-header {
+	font-size: 1.3em;
     padding: 6px 6px 0 6px;
 }
+
+.story {
+	list-style: none;
+	margin-bottom: 0.25em;
+	border: 2px solid;
+	border-radius: 4px;
+	-webkit-border-radius: 4px;
+	font-size: 0.75em;
+}
+
+.story-header {
+	overflow: hidden;
+	cursor: move;
+	border-bottom: 1px solid;
+}
+
+.story-link {
+	padding-left: .5em;
+	padding-right: .25em;
+	text-decoration: none;
+	color: black;
+	line-height: 24px;
+}
+
+.story-id {
+	font-weight: bold;
+	float: left;
+}
+
+.story-owner {
+	float: right;
+	font-size: 0.9em;
+}
+.story-owner-name {
+	float: left;
+    vertical-align: middle;
+    line-height: 24px;
+    margin-right: 4px;
+}
+
+.story-owner-avatar {
+    float: left;
+    vertical-align: middle;
+}
+
+.story-text {
+	font-size: 1.1em;
+	padding: .5em;
+}
+
+/* Story colour schemes */
+
+.grey {
+    background-color: #eee;
+    border-color: #bbb;
+}
+
+.grey .story-header {
+    background-color: #ddd;
+    border-color: #bbb;
+}
+
+.red {
+    background-color: #fdd;
+    border-color: #faa;
+}
+
+.red .story-header {
+	background-color: #fbb;
+    border-color: #faa;
+}
+
