--- a/app/views/project-page.html
+++ b/app/views/project-page.html
@@ -14,6 +14,16 @@
     </head>
     <body>
     <header>
+	    <h1>${project.title}</h1>
+	    <p>${project.description}</p>
+    
+        <nav>
+          <ul>
+            <li><a href="@{Application.index()}">Home</a></li>
+            <li><a href="@{Application.board(project?.id)}">Board</a></li>
+            <li class="clear" />
+          </ul>
+        </nav>
     </header>
         #{doLayout /}
     <footer>
