simplify navigation css

--- a/app/views/project-page.html
+++ b/app/views/project-page.html
@@ -19,9 +19,9 @@
     
         <nav>
           <ul>
+            <li class="project-selector"></li>
             <li><a href="@{Application.index()}">Home</a></li>
             <li><a href="@{Application.board(project?.id)}">Board</a></li>
-            <li class="clear" />
           </ul>
         </nav>
     </header>
