--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
     <head>
         <title>#{get 'title' /}</title>
@@ -14,8 +13,32 @@
     </head>
     <body>
     <header>
+		#{if pageType == 'project'}
+		    <h1>${project.title}</h1>
+		    <p>${project.description}</p>    
+		    <nav>
+		      <ul>
+		        <li>
+		          <ul class="project-selector">
+		            <li>${project.title}</li>
+		          </ul>
+		        </li>
+		        <li><a href="@{Application.index()}">Home</a></li>
+		        <li><a href="@{Application.board(project?.id)}">Board</a></li>
+		      </ul>
+		    </nav>
+		#{/if}
+		#{else}
+		    <nav>
+		      <ul>
+		        <li>
+		        </li>
+		        <li><a href="@{Application.index()}">Home</a></li>
+		      </ul>
+		    </nav>
+		#{/else}
     </header>
-        #{doLayout /}
+    #{doLayout /}
     <footer>
     </footer>
     </body>
