--- a/app/views/Application/board.html
+++ b/app/views/Application/board.html
@@ -7,6 +7,12 @@
 %{
     laneWidth = Math.round(1000/(project.states.size() - 2))/10
 }%
+<script>
+var routes = {
+ 	moveStoryToState: #{jsAction @Ajax.moveStoryToState(':story', ':state', ':index') /},
+    moveStory: #{jsAction @Ajax.moveStory(':story', ':index') /},
+} 
+</script>
 <section class="project">
 	<div id="swim-lanes">
 		<div id="backlog-lane">${project.states[0].name}</div>
