--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -30,6 +30,14 @@ body {
 	clear: both;
 }
 
+/* Common page elements */
+
+#logo {
+	width: 200px;
+	height: 40px;
+	padding: 6px 6px 0 6px;
+}
+
 /* Navigation */
 
 nav {
@@ -39,10 +47,10 @@ nav {
 }
 
 nav ul {
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#cccccc', endColorstr='#000000'); /* for IE */
-    background: -webkit-gradient(linear, left top, left bottom, from(#ccc), to(#000)); /* for webkit browsers */
-    background: -moz-linear-gradient(top,  #ccc,  #000); /* for firefox 3.6+ */
-    padding: .6em 0 .6em 0;
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#885500', endColorstr='#000000'); /* for IE */
+    background: -webkit-gradient(linear, left top, left bottom, from(#a50), to(#000)); /* for webkit browsers */
+    background: -moz-linear-gradient(top,  #850,  #000); /* for firefox 3.6+ */
+    padding: .4em 0 .4em 0;
 /*     border-radius: 2em; */
 /*     -webkit-border-radius: 2em; */
 }
