add process page

--- a/app/views/Kantban/board.html
+++ b/app/views/Kantban/board.html
@@ -13,7 +13,7 @@ var routes = {
     moveStory: #{jsAction @Ajax.moveStory(':story', ':index') /},
 } 
 </script>
-<section class="project">
+<section>
 	<div id="swim-lanes">
 		<div id="backlog-lane">${project.states[0].name}</div>
 		<div id="middle-lanes">
