--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -87,14 +87,13 @@ nav .project-selector li {
 	
 	padding: 8px;
 }
+.lane-header { 
+    font-size: 1.3em;
+    padding: 0 6px 6px 6px;
+}
 
 #backlog-lane, #archive-lane {
 	display: none;
-}
-
-.lane-header { 
-	font-size: 1.3em;
-    padding: 0 6px 6px 6px;
 }
 
 /* Story cards */
@@ -107,30 +106,25 @@ nav .project-selector li {
 	-webkit-border-radius: 4px;
 	font-size: 0.75em;
 }
-
 .story-list {
 	height: auto;
 	min-height: 500px;
 }
-
 .story-header {
 	overflow: hidden;
 	cursor: move;
 	border-bottom: 1px solid;
 }
-
 .story-link {
 	padding-left: .5em;
 	padding-right: .25em;
 	color: black;
 	line-height: 24px;
 }
-
 .story-id {
 	font-weight: bold;
 	float: left;
 }
-
 .story-owner {
 	float: right;
 	font-size: 0.9em;
@@ -141,12 +135,10 @@ nav .project-selector li {
     line-height: 24px;
     margin-right: 4px;
 }
-
 .story-owner-avatar {
     float: left;
     vertical-align: middle;
 }
-
 .story-text {
 	font-size: 1.1em;
 	padding: .5em;
@@ -173,28 +165,54 @@ nav .project-selector li {
 }
 
 /* Process flow */
+
 #state-list {
     list-style: none;
+    padding: .15em;
 }
 .state-item {
 	width: 160px;
 	height: 160px;
 	float: left;
-	margin: 3px 3px 3px 0;
-	padding 1px;
+	margin: 4px;
 	background-color: #fc0;
 	border: 1px solid #850;
-    border-radius: 4px;
-    -webkit-border-radius: 4px;
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+}
+.state-item.fixed {
+    background-color: #d90;
 }
 .state-item .limit {
 	color: #444;
 }
 .state-item .description {
     font-size: .8em;
-    font-style: italic;	
+    font-style: italic;
+    margin-top: .5em;
+    text-align: left;
 }
 .state-info {
-/* 	height: 6em; */
+ 	height: 100px;
+	text-align: center;
 	padding: .8em;
+}
+.state-item.draggable .state-info {
+    cursor: move;
+}
+.state-footer {
+	border-top: 1px dotted #850;
+	padding-top: 4px;
+	text-align: center;
+}
+
+/* Modifications of the normal jquery ui styling */
+
+.small-button .ui-button-icon-primary {
+   left: .2em;
+}
+.small-button .ui-button-text {
+	padding: .1em .5em .1em 2em;
+	font-weight: normal;
+	font-size: .6em;
 }
