change logo to png. Add project base page. Refactor project controllers

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -14,7 +14,7 @@
     </head>
     <body>
     <header>
-        <a href="@{Application.index()}"><img id="logo" src="@{'/public/images/kantban.svg'}" title="Kantban" /></a>
+        <a href="@{Application.index()}"><img id="logo" src="@{'/public/images/kantban.png'}" title="Kantban" /></a>
         *{ FIXME Move nav to a tag }*
 		#{if pageType == 'project'}
 		  <!-- 
