refactor names of controllers. Factor Ajax back in with normal controller methods.

--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -3,6 +3,6 @@
 
 <ul class="projects">
 #{list items:projects, as:'project'}
-  <li class="project"><a href="@{Kantban.board(project.id)}">${project.title}</a></li>
+  <li class="project"><a href="@{Project.board(project.id)}">${project.title}</a></li>
 #{/list}
 </ul>
