Do a bit of styling

--- a/app/views/Project/board.html
+++ b/app/views/Project/board.html
@@ -1,6 +1,8 @@
 #{extends 'main.html' /}
-#{set pageType:'project' /}
-#{set title:'Home' /}
+#{set pageType: 'project' /}
+#{set nav: 'board' /}
+#{set title:'Board' /}
+
 #{set 'moreScripts'}
     #{script 'jquery-sizes-0.33.min.js' /}
     #{script 'board.js' /}
