--- a/app/views/main.html
+++ b/app/views/main.html
@@ -23,14 +23,13 @@
 		   -->    
 		    <nav>
 		      <ul>
-		        <li>
-		          <ul class="project-selector">
-		            <li>${project.title}</li>
-		          </ul>
-		        </li>
-		        <li><a href="@{Project.index(project.id)}">Home</a></li>
-                <li><a href="@{Project.board(project.id)}">Board</a></li>
-                <li><a href="@{Project.process(project.id)}">Process</a></li>
+	            <li><a id="project-selector" href="#">${project.title}</a></li>
+		        <li><a href="@{Project.index(project.id)}" class="${nav == 'project' ? 'current' : ''}">Home</a></li>
+                <li><a href="@{Project.board(project.id)}" class="${nav == 'board' ? 'current' : ''}">Board</a></li>
+                <li><a href="#">People</a></li>
+                <li><a href="#">Stories</a></li>
+                <li><a href="#">Reports</a></li>
+                <li><a href="@{Project.process(project.id)}" class="${nav == 'process' ? 'current' : ''}">Process</a></li>
 		      </ul>
 		    </nav>
 		#{/if}
