--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -39,46 +39,36 @@ body {
 }
 
 /* Navigation */
-
-nav {
-    color: white;
-    font-weight: normal;
-    font-size: 1.2em;
-}
-
 nav ul {
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#885500', endColorstr='#000000'); /* for IE */
     background: -webkit-gradient(linear, left top, left bottom, from(#a50), to(#000)); /* for webkit browsers */
     background: -moz-linear-gradient(top,  #850,  #000); /* for firefox 3.6+ */
-    padding: .4em 0 .4em 0;
-/*     border-radius: 2em; */
-/*     -webkit-border-radius: 2em; */
+    height: 2.4em;
+    border-bottom: 2px solid gray;
+    border-top: 2px solid gray;
+/*     border-radius: 1.2em; */
+/*     -webkit-border-radius: 1.2em; */
 }
-
 nav li {
 	display: inline;
+    font-size: 1.1em;
+    color: white;
+    font-weight: normal;
 }
-
 nav li a {
+	display: block;
+	float: left;
     color: inherit;
-	padding: 0 0 0 1.5em;
+ 	line-height: 2.1em; 
+	padding: 0 .5em;
+/*     border-radius: 1.05em; */
+/*     -webkit-border-radius: 1.05em; */
 }
-
-nav .project-selector {
-	width: 200px;
-	display: inline;
+nav li a.current {
+    background: rgba(0, 0, 0, 0.2);
 }
-
-nav .project-selector li {
-    padding: 0 0 0 1.5em; 
-}
-
-#menu {
-	
-}
-
-section { 
-	height: 100%;
+nav li a:hover {
+    background: rgba(0, 0, 0, 0.2);
 }
 
 /* Modifications of the normal jquery ui styling */
