--- a/app/views/Project/story.html
+++ b/app/views/Project/story.html
@@ -1,6 +1,6 @@
 #{extends 'main.html' /}
-#{set pageType:'project' /}
-#{set title:'Home' /}
+#{set pageType: 'project' /}
+#{set title: 'Story: ' + story.title /}
 
 <section>
 Story goes here
