--- a/public/stylesheets/board.css
+++ b/public/stylesheets/board.css
@@ -78,7 +78,7 @@
     line-height: 24px;
     margin-right: 4px;
 }
-.story-owner-avatar {
+.story-owner img {
     float: left;
     vertical-align: middle;
 }
