--- a/app/views/tags/story-card.html
+++ b/app/views/tags/story-card.html
@@ -1,8 +1,11 @@
 *{ stupid underscores }*
 %{ story = _story }%
 <div class="story-header">
-    <div class="story-id">
-        <a class="story-link" href="@{Project.story(story.id)}" title="Click for story details">${story.id}</a>
+    <div class="story-id">       
+        <a class="story-link" href="@{Project.story(story.id)}" title="Click for story details">
+            <span class="ui-icon ui-icon-pencil"></span>
+            ${story.id}
+        </a>
     </div>
     <div class="story-owner">
         <span class="story-owner-name">${story.owner ? story.owner.name : 'Unassigned'}</span>
