Add markdown support, and implement markdown parsing in templates

--- a/app/views/tags/story-card.html
+++ b/app/views/tags/story-card.html
@@ -16,5 +16,5 @@
 </div>
 <div class="story-text">
 <p>${story.title}</p>
-<p>${story.description}</p> *{ FIXME add formatting }*
+<p>${story.description?.parseMarkdown()}</p>
 </div>
