--- a/app/views/tags/state-card.html
+++ b/app/views/tags/state-card.html
@@ -3,7 +3,7 @@
 <div class="state-info">
   <span class="name">${state.name}</span>
   <span class="limit">#{if state.limit}(${state.limit})#{/if}</span>
-  <div class="description">${state.description}</div>
+  <div class="description">${state.description.parseMarkdown()}</div>
 </div>
 <div class="state-footer">
   <button class="state-edit small-button">edit</button>
